--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Hi</h2>
         <div>
           <p>
-            My name is Bobby Hsu. I'm currently a Data Engineer at Meta in Bellevue, WA on the Media Foundation Team and also pursuing a MSCS at Georgia Tech. I have extensive experience writing APIs in Python and creating large-scale ETL pipelines in AWS. 
+            My name is Bobby Hsu. I'm a Data Engineer at Meta (FOA) and also pursuing a MSCS at Georgia Tech. I have experience writing APIs in Python and creating large-scale ETL pipelines in AWS. 
             In my free time, I enjoy running, hiking, and speedrunning video games. Feel free to add me on LinkedIn! 
           </p>
           <p> 
@@ -52,6 +52,7 @@
 
 </body>
 </html>
+
 
 
 
