--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <h2>Hi</h2>
         <div>
           <p>
-            My name is Bobby Hsu. I'm a Data Engineer at Meta (FOA) and also pursuing a MSCS at Georgia Tech. I have experience writing APIs in Python and creating large-scale ETL pipelines in AWS. 
-            In my free time, I enjoy running, hiking, and speedrunning video games. Feel free to add me on LinkedIn! 
+            My name is Bobby Hsu. I'm a Data Engineer at Meta and also pursuing an MSCS @ Georgia Tech. 
+            In my free time, I enjoy casual running, hiking, and speedrunning video games. My favorite game is The Legend of Zelda Twilight Princess. Feel free to add me on LinkedIn :) 
           </p>
           <p> 
             <a href="bobby_hsu_resume.pdf"><i class="far fa-file-pdf"></i></a>
@@ -52,6 +52,7 @@
 
 </body>
 </html>
+
 
 
 
