--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
             In my free time, I enjoy casual running, hiking, and speedrunning video games. My favorite game is The Legend of Zelda Twilight Princess. Feel free to add me on LinkedIn :) 
           </p>
           <p> 
-            <a href="bobby_hsu_resume.pdf"><i class="far fa-file-pdf"></i></a>
+            <a href="bobby_hsu_resume.pdf"><i class="far fa-meta"></i></a>
             <a href="https://github.com/rasterroo"><i class="fab fa-github-square"></i></a>
             <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
             <a href="https://medium.com/@rasterroo"><i class="fab fa-medium"></i></a>
-            <a href="https://www.instagram.com/rasterroo/"><i class="fab fa-instagram"></i></a>
           </p>
         </div>
           <div class="polaroid">
@@ -52,6 +51,7 @@
 
 </body>
 </html>
+
 
 
 
