--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <h2>Hi</h2>
         <div>
           <p>
-            My name is Bobby Hsu. I'm a Data Engineer at Meta and also pursuing an MSCS @ Georgia Tech. 
-            In my free time, I enjoy casual running, hiking, and speedrunning video games. My favorite game is The Legend of Zelda Twilight Princess. Feel free to add me on LinkedIn :) 
+            My name is Bobby Hsu. I'm a Data Engineer at Meta and also pursuing an MSCS at Georgia Tech. 
+            In my free time, I enjoy casual running, hiking, and speedrunning video games. My favorite game is The Legend of Zelda Twilight Princess.  
           </p>
           <p> 
-            <a href="bobby_hsu_resume.pdf"><i class="fab fa-meta"></i></a>
+            <a href="bobby_hsu_resume.pdf"><i class="fa-brands fa-meta"></i></a>
             <a href="https://github.com/rasterroo"><i class="fab fa-github-square"></i></a>
             <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
             <a href="https://medium.com/@rasterroo"><i class="fab fa-medium"></i></a>
@@ -51,6 +51,7 @@
 
 </body>
 </html>
+
 
 
 
