--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>Hi</h2>
         <div>
           <p>
-            My name is Bobby Hsu. I'm a Data Engineer at <i class="fa-brands fa-meta" style="font-size: 0.8em;"></i>  and also pursuing an MSCS at Georgia Tech. 
+            My name is Bobby Hsu. I'm a Data Engineer at <i class="fa-brands fa-meta" style="font-size: 0.9em padding-right: 5px;"></i>  and also pursuing an MSCS at Georgia Tech. 
             In my free time, I enjoy casual running, hiking, and speedrunning video games. My favorite game is The Legend of Zelda Twilight Princess.  
           </p>
           <p> 
@@ -51,6 +51,7 @@
 
 </body>
 </html>
+
 
 
 
