Revise header section with job title and greeting
Updated the header section to include the job title and adjusted the greeting.

--- a/index.html
+++ b/index.html
@@ -24,12 +24,9 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
-        <h2>Hi</h2>
+        <h2>Bobby Hsu</h2>
+        <h3>Data Engineer at Meta <i class="fa-brands fa-meta" style="font-size: 0.8em;"></i></h3>
         <div>
-          <p>
-            My name is Bobby Hsu. I'm a Data Engineer at <span style="color: #0081FB;">Meta</span> and also pursuing an MSCS at Georgia Tech. 
-            In my free time, I enjoy casual running, hiking, and speedrunning video games. My favorite game is The Legend of Zelda Twilight Princess.  
-          </p>
           <p> 
             <a href="bobby_hsu_resume.pdf"><i class="far fa-file-pdf"></i></a>
             <a href="https://github.com/rasterroo"><i class="fab fa-github-square"></i></a>
@@ -51,6 +48,7 @@
 
 </body>
 </html>
+
 
 
 
