--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
         <h2>Bobby Hsu</h2>
-        <h3>Data Engineer at Meta <i class="fa-brands fa-meta" style="font-size: 0.8em;"></i></h3>
+        <h3>Data Engineer at Meta <i class="fa-brands fa-meta" style="font-size: 0.8em;" style="color:#D3D3D3;"></i></h3>
         <div>
-          <p> 
+          <h3> 
             <a href="bobby_hsu_resume.pdf"><i class="far fa-file-pdf"></i></a>
             <a href="https://github.com/rasterroo"><i class="fab fa-github-square"></i></a>
             <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
             <a href="https://medium.com/@rasterroo"><i class="fab fa-medium"></i></a>
-          </p>
+          </h3>
         </div>
           <div class="polaroid">
               <img src="images/cat-fish.png" alt="Home" style="width:100%">
@@ -48,6 +48,7 @@
 
 </body>
 </html>
+
 
 
 
