--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
         <h2>Bobby Hsu</h2>
-        <h3 style="color:#D3D3D3;">Data Engineer at Meta <i class="fa-brands fa-meta" style="font-size: 0.8em;"></i></h3>
+        <h3>Data Engineer at Meta <i class="fa-brands fa-meta" style="font-size: 0.8em;"></i></h3>
         <div>
           <h3> 
             <a href="bobby_hsu_resume.pdf"><i class="far fa-file-pdf"></i></a>
