changing font sizes

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
     <div class="col-md-10 col-md-offset-1">
       <div class="banner-text text-center">
         <div class="col-md-10 col-md-offset-1 text-center">
-        <h2>Bobby Hsu</h2>
-        <h3>Data Engineer at Meta <i class="fa-brands fa-meta" style="font-size: 0.8em;"></i></h3>
+        <h1>Bobby Hsu</h2>
+        <h2>Data Engineer at Meta <i class="fa-brands fa-meta" style="font-size: 0.9em;"></i></h3>
         <div>
-          <h3> 
+          <p> 
             <a href="bobby_hsu_resume.pdf"><i class="far fa-file-pdf"></i></a>
             <a href="https://github.com/rasterroo"><i class="fab fa-github-square"></i></a>
             <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
             <a href="https://medium.com/@rasterroo"><i class="fab fa-medium"></i></a>
-          </h3>
+          </p>
         </div>
           <div class="polaroid">
               <img src="images/cat-fish.png" alt="Home" style="width:100%">
               <div class="container">
-                <p>🐟🐈</p>
+                <p>Catching Fish 🐟🐈</p>
               </div>
           </div>
       </div>
