--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
     <div class="line"></div>
   </div>
   <div class="container">
-    <h1>Bobby Hsu</h1>
-    <h2>Data Engineer at Meta <i class="fa-brands fa-meta" style="font-size: 0.9em;"></i></h2>
-    <div>
-      <h3> 
-        <a href="bobby_hsu_resume.pdf"><i class="far fa-file-pdf"></i></a>
-        <a href="https://github.com/rasterroo"><i class="fab fa-github-square"></i></a>
-        <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
-        <a href="https://medium.com/@rasterroo"><i class="fab fa-medium"></i></a>
-      </h3>
+    <div class="col-md-10 col-md-offset-1 text-center">
+      <h1>Bobby Hsu</h1>
+      <h2>Data Engineer at Meta <i class="fa-brands fa-meta" style="font-size: 0.9em;"></i></h2>
+      <div>
+        <h3> 
+          <a href="bobby_hsu_resume.pdf"><i class="far fa-file-pdf"></i></a>
+          <a href="https://github.com/rasterroo"><i class="fab fa-github-square"></i></a>
+          <a href="https://www.linkedin.com/in/bobby-hsu/"><i class="fab fa-linkedin"></i></a>
+          <a href="https://medium.com/@rasterroo"><i class="fab fa-medium"></i></a>
+        </h3>
+      </div>
     </div>
   </div>
 </section>
